--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Favorite Movies</string>
+    <string name="release_date">Release date: </string>
+    <string name="content_description">movie image</string>
 </resources>
