hopefully the final commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="favorites_text">Favorites</string>
     <string name="sort_by_top_rated">sort by top rated</string>
     <string name="sort_by_popularity">sort by popularity</string>
+    <string name="view_reviews">View Reviews</string>
+    <string name="a_poster_for_the_movie">a poster for the movie</string>
 </resources>
