changing the favorite button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="sort_by_popularity">sort by popularity</string>
     <string name="view_reviews">View Reviews</string>
     <string name="a_poster_for_the_movie">a poster for the movie</string>
+    <string name="trailers">Trailers</string>
 </resources>
